windows spice usb ,cause virt-view crash
When the windows system uses usbdk to map USB devices,usbdk is a compile-time option, but it becomes a runtime option from version 1.0.22 onwards, so you need to specify the usbdk backend using something like the following. The default is to use WinUsb. To use usbdk, you need to call the libusb_set_option function to specify, but the present spice-gtk does not specify that the virt-viewer causes the virt-viewer to crash directly.