usb-device-manager: Set UsbDk backend on libusb 1.0.22

In libusb 1.0.21, UsbDk is enabled at compile time with --enable-usbdk
option. In libusb 1.0.22, the backend is selected at runtime.

This patch avoids a crash when spice client is compiled against libusb
1.0.22 and UsbDk is not installed.

* Enabling dynamic backend selection in Windows
https://github.com/libusb/libusb/commit/54884e84d024e761450287ab56aca

https://gitlab.freedesktop.org/spice/spice-gtk/issues/74
Signed-off-by: Victor Toso <victortoso@redhat.com>
Acked-by: Christophe Fergeau <cfergeau@redhat.com>